<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddCredentials">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="12dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/title_edittext"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="Title"
            android:maxLines="2" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="12dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username_edittext"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="Username"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="12dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_edittext"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="Password"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/save_btn"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/button_background"
        android:elevation="22dp"
        android:fontFamily="@font/poppins_bold"
        android:onClick="saveCredentials"
        android:padding="6dp"
        android:text="Save"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="18sp"
        app:backgroundTint="@color/colorAccent"
        app:strokeColor="#ffffff" />

</LinearLayout>