...
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/enterMasterPassword_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="5dp"
                    android:maxLines="1"
                    android:inputType="text"
                    android:hint="Master Password" />
            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/signIn_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/button_background"
...
