...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="15dp" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
...
